--- a/homePage.css
+++ b/homePage.css
@@ -13,7 +13,6 @@
   margin-right: 20px;
 }
 .right-item {
-  padding: 0;
   margin-left: auto;
 }
 .nav-item a {
@@ -40,8 +39,6 @@
 .container-1 {
   width: 100%;
   height: 100vh;
-  margin: 0;
-  padding: 0;
   background-image: url("assets/home page img.jpg");
   background-size: cover;
   background-position: center;
@@ -68,40 +65,35 @@
   }
 }
 .container-2 {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   gap: 15px;
   padding: 20px;
-  justify-content: space-around;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
 }
-
 .content-box {
-  background-color: #d3d3d3;
+  background-color: #ffffff;
   color: #333;
   padding: 20px;
   font-size: 1.2em;
   border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   text-align: center;
+  position: relative;
+  overflow: hidden;
+  /* background-image: url('assets\background_content_2.jpg'); */
 }
-.box1 {
-  flex: 1 1 30%;
+.box1, .box2 {
+  grid-column: span 1;
 }
-.box2 {
-  flex: 1 1 45%;
+
+.box3, .box4 {
+  grid-column: span 1;
 }
-.box3 {
-  flex: 1 1 20%;
-}
-.box4 {
-  flex: 1 1 35%;
-}
-.box5 {
-  flex: 1 1 25%;
-}
-.box6 {
-  flex: 1 1 40%;
+
+.image img {
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  display: block;
+  background-color: #9ddcf7;
 }
