--- a/homePage.css
+++ b/homePage.css
@@ -91,9 +91,53 @@
 }
 
 .image img {
-  width: 100%;
-  height: auto;
+  width: 150%;
+  height: 100%;
   border-radius: 10px;
   display: block;
   background-color: #9ddcf7;
+}
+.container-3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 80vh;
+}
+
+.slideshow-container {
+    position: relative;
+    width: 70vh;
+    height: 70vh;
+    overflow: hidden;
+    border-radius: 8px;
+    background-color: #9ddcf7; /* Optional background color */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+}
+
+.slideshow-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease;
+    border-radius: 10px;
+}
+
+.slideshow-img.active {
+    opacity: 1;
+}
+footer {
+  text-align: center;
+  padding: 1rem;
+  background-color: rgb(52, 175, 216);
+  color: #fff;
+  font-size: 0.9rem;
+  margin-top: 2rem;
 }
