--- a/homePage.css
+++ b/homePage.css
@@ -80,17 +80,22 @@
   gap: 1rem;
   padding: var(--spacing-standard);
   background-color: var(--background-light);
+  border-radius: solid black;
 }
 
 .container-3 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 80vh;
+  overflow: hidden;
   background-image: url('assets/background_content_2.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-
 .container-4 {
   position: relative;
   margin: var(--spacing-standard);
@@ -125,7 +130,6 @@
   color: var(--text-color);
   padding: var(--spacing-standard);
   font-size: 1.2em;
-  border-radius: var(--border-radius);
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -148,7 +152,7 @@
 
 /* Slideshow */
 .slideshow-container {
-  position: relative;
+  position: absolute;
   width: 70vh;
   height: 70vh;
   overflow: hidden;
